--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@
   <footer class="footer_section">
     <div class="container">
       <p>
-        &copy; <span id="displayYear"></span> All Rights Reserved By
+        &copy; <span id="displayYear"></span> All Rights reserved for qahar hashimi
         <a href="https://html.design/">Free Html Templates</a>
       </p>
     </div>
